# compare-dotenvs

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  compare_dotenvs.py  pyproject.toml
tests/: test_remove_values_from_env_vars.py
